Wrap progress bar to prevent "Included Featuers" from jumping

--- a/main/src/main/js/launch/src/style.css
+++ b/main/src/main/js/launch/src/style.css
@@ -106,6 +106,11 @@ body {
   background-color: rgba(0, 0, 0, 0.74);
 }
 
+.progress-container {
+  height: 8px;
+  min-height: 8px;
+}
+
 .spinner-blue,
 .spinner-blue-only {
   border-color: #000000;
